--- a/package.json
+++ b/package.json
@@ -12,28 +12,37 @@
     "db:reset": "prisma db push --force-reset",
     "db:init": "node scripts/init-db.js",
     "db:seed": "node scripts/init-db.js",
+    "test:api": "node scripts/test-api.js",
     "prisma:studio": "prisma studio",
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.22.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
+    "date-fns": "^2.30.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "^14.0.0",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.2.1",
+    "nodemailer": "^6.10.1",
+    "prisma": "^5.22.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "@prisma/client": "^5.0.0",
-    "prisma": "^5.0.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
-    "axios": "^1.6.0",
-    "react-query": "^3.39.0",
-    "date-fns": "^2.30.0",
     "react-hook-form": "^7.45.0",
-    "react-hot-toast": "^2.4.0"
+    "react-hot-toast": "^2.4.0",
+    "react-query": "^3.39.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.0",
-    "postcss": "^8.0.0",
-    "tailwindcss": "^3.0.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.0.0"
   }
 }
