--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "group-activity-tracker",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "npm@10.2.4",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
@@ -24,7 +25,6 @@
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
-    "crypto": "^1.0.1",
     "date-fns": "^2.30.0",
     "jsonwebtoken": "^9.0.0",
     "next": "^14.0.0",
