--- a/package.json
+++ b/package.json
@@ -8,14 +8,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
-    "db:push": "prisma db push",
-    "db:reset": "prisma db push --force-reset",
-    "db:init": "node scripts/init-db.js",
-    "db:seed": "node scripts/init-db.js",
-    "test:api": "node scripts/test-api.js",
-    "prisma:studio": "prisma studio",
-    "prisma:generate": "prisma generate"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
