--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.10.1",
+    "pg": "^8.16.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.45.0",
